<resources>
    <string name="app_name">FileReaderWriter</string>
    <string name="filename">文件名</string>
    <string name="content">内容</string>
    <string name="filecontent">文件内容</string>
    <string name="black">黑</string>
    <string name="green">绿</string>
    <string name="yellow">黄</string>
    <string name="red">红</string>
    <string name="read">读取</string>
    <string name="write">写入</string>
</resources>