<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filename"/>
    <EditText
        android:id="@+id/fileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/title"
        android:hint="@string/filename"/>
    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/content"
        android:layout_alignBottom="@+id/content"

        android:text="@string/content"/>
    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fileName"
        android:layout_below="@id/fileName"
        android:ems="10"
        android:hint="@string/filecontent">
        <requestFocus/>
    </EditText>
    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/black"/>
        <RadioButton
            android:id="@+id/Green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green"/>
        <RadioButton
            android:id="@+id/Yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow"/>
        <RadioButton
            android:id="@+id/Red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red"/>
    </RadioGroup>
    <Button
        android:id="@+id/read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RadioGroup"
        android:text="@string/read"/>
    <Button
        android:id="@+id/write"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/read"
        android:layout_alignBottom="@id/read"
        android:layout_toRightOf="@id/read"
        android:text="@string/write"/>
</RelativeLayout>